# mimalloc_rust2

./: Cargo.toml
.github/workflows/: ci.yml  release.yml
libmimalloc-sys/: Cargo.toml  build.rs
