[package]
name = "mimalloc2"
version = "0.1.44"
authors = [
    "Octavian Oncescu <octavonce@gmail.com>",
    "Vincent Rouillé <vincent@speedy37.fr>",
    "Thom Chiovoloni <chiovolonit@gmail.com>",
]
edition = "2021"
repository = "https://github.com/purpleprotocol/mimalloc_rust"
keywords = ["mimalloc", "allocator", "encrypted-heap", "performance"]
categories = ["memory-management", "api-bindings"]
description = "Performance and security oriented drop-in allocator"
license = "MIT"
readme = "README.md"

[workspace]
members = ["libmimalloc-sys", "libmimalloc-sys/sys-test"]

[badges]
travis-ci = { repository = "purpleprotocol/mimalloc_rust" }

[dependencies]
libmimalloc-sys2 = { path = "libmimalloc-sys", version = "0.1.40", default-features = false }

[features]
default = []
secure = ["libmimalloc-sys2/secure"]
override = ["libmimalloc-sys2/override"]
local_dynamic_tls = ["libmimalloc-sys2/local_dynamic_tls"]
no_thp = ["libmimalloc-sys2/no_thp"]
extended = ["libmimalloc-sys2/extended"]
skip_collect_on_exit = ["libmimalloc-sys2/skip_collect_on_exit"]

etw = ["libmimalloc-sys2/etw"]